# CardioMonitor

./: .env.example  .gitignore  PLANO_MERGE.md  README.md  SPEC_APP_MEDICO.md  main.py  pyproject.toml
agent/: README.md
app/: dash_app.py  streamlit_app.py
blua_merge_files/: MERGE_GUIDE.md
blua_merge_files/app/: unified_app.py
dashboard/: app.py
dashboard/assets/: blua_thinking.css  style.css
dashboard/data/: helena_data.csv  lucas_data.csv  maria_data.csv  meu_perfil_data.csv  pedro_data.csv
dashboard/pages/: chat.py  home.py  meu_perfil.py  monitor.py  pacientes.py  prontuario.py
dashboard/utils/: alertas.py  anotacoes_runtime.py  calculadoras.py  calculadoras_ui.py  email_alert.py  prontuario.py  rascunhos_runtime.py  semaforo.py  storage.py  timeline.py
dashboard_legacy/: README.md  requirements.txt
dashboard_legacy/pages/: home.py
dashboard_legacy/utils/: storage.py
data/: cardiac_data.csv
data/mocks/: agendamentos.json  medicos.json  perfis_clinicos.json
data/runtime/: rascunhos_demo.json
docs/: INTEGRACAO_ARRHYTHMIAMONITOR.md
docs/arquitetura/: ANALISE_COMPARATIVA_v2.md  PENDENCIAS_POS_INTEGRACAO.md  PLANO_INTEGRACAO_ARRHYTHMIAMONITOR.md
prompts/: agente_checkup.md  agente_supervisor.md  agente_suporte_clinico.md  agente_triagem.md
shared/: paths.py  patient_registry.py  telemetry_store.py
simulador/: README.md  gerador_ibi.py
src/: graph.py
src/agents/: checkup.py  prescricao.py  safety.py  (+2 more)
tests/: test_calculadoras.py  test_escopo_cardiovascular.py  test_prescricao_tool.py  test_timeline.py
tools/: tools_spec.json
(+14 files in other folders)
